# campus-navigation

./: .gitignore  NOTE.md  README.md  build.bat  run_all_tests.bat  run_all_tests_annotated.bat  run_all_tests_old.bat  run_single_test.bat
CampusNavigation/: Algorithm.cpp  Algorithm.h  CMakeLists.txt  CommandProcessor.cpp  CommandProcessor.h  CsvIO.cpp  CsvIO.h  LGraph.cpp  LGraph.h  LocationInfo.h  run_all_tests.bat
docs/ai/1/: api_conversation_history.json  task_metadata.json  ui_messages.json
docs/ai/2/: api_conversation_history.json  task_metadata.json  ui_messages.json
docs/ai/3/: api_conversation_history.json  task_metadata.json  ui_messages.json
docs/my_completed/: NOTE.md  实验报告.md
tools/: README.md  make_my_test.py
测试数据/拓展/拓展1_共享单车/: README.md
测试数据/拓展/拓展2_场景与任务/: README.md
测试数据/拓展/拓展2_对抗样例/: README.md  adversarial_places.csv  adversarial_roads.csv  command.txt
测试数据/拓展/拓展2_微型数据集/: README.md  command.txt  places.csv  roads.csv
测试数据/拓展/拓展3_图形化界面/: README.md  campus_map.html
